syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "ProfileFull.proto";
import "Registration.proto";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message RegisterRequest {
  Registration registration = 1;
}

message RegisterResponse {
  bool success = 1;
  bool duplicate_user_name = 2;
}

message AuthenticateRequest {
  string user_name = 1;
  string password = 2;
}

message AuthenticateResponse {
  bool missing = 1;
  bool invalid_password = 2;
  ProfileFull profile = 3;
}
