syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Backplane";
package CecoChat.Contracts.Backplane;

enum ConnectionStatus {
  NOT_CONNECTED = 0;
  PENDING = 1;
  CONNECTED = 2;
}
